--- a/src/components/Header/styles/Header.module.scss
+++ b/src/components/Header/styles/Header.module.scss
@@ -1,7 +1,7 @@
 @use '../../../app/variables' as *;
 
 #header{
-    width:100vw;
+    width:100%;
     height: 18%;
     background-color: white;
     display: flex;
